fix: Adjust request in itemController
