# backend/src/swagger/swagger.json
@@ -341,6 +341,17 @@
 					"description": {
 						"type": "string",
 						"example": "Nova descrição da venda"
+					},
+					"status": {
+						"type": "string",
+						"enum": [
+							"NEGOTIATING",
+							"CONFIRMED",
+							"PAID",
+							"CANCELLED"
+						],
+						"description": "Status da venda",
+						"example": "CONFIRMED"
 					}
 				},
 				"type": "object",
@@ -728,7 +739,13 @@
 				"tags": [
 					"Usuários"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"ADMIN"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "query",
@@ -781,7 +798,11 @@
 				"tags": [
 					"Usuários"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -831,7 +852,11 @@
 				"tags": [
 					"Usuários"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -881,7 +906,13 @@
 				"tags": [
 					"Usuários"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"ADMIN"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -1155,6 +1186,62 @@
 				}
 			}
 		},
+		"/sales/user/{userId}": {
+			"get": {
+				"operationId": "GetAllByUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/PaginatedResponse_SaleDetailResponse_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Vendas"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "page",
+						"required": false,
+						"schema": {
+							"default": 1,
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"default": 10,
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/payments": {
 			"get": {
 				"operationId": "GetAll",
@@ -1171,7 +1258,7 @@
 					}
 				},
 				"tags": [
-					"Pagamentos-TESTE-999"
+					"Pagamentos"
 				],
 				"security": [
 					{
@@ -1226,7 +1313,7 @@
 					}
 				},
 				"tags": [
-					"Pagamentos-TESTE-999"
+					"Pagamentos"
 				],
 				"security": [
 					{
@@ -1272,7 +1359,7 @@
 					}
 				},
 				"tags": [
-					"Pagamentos-TESTE-999"
+					"Pagamentos"
 				],
 				"security": [
 					{
@@ -1316,7 +1403,7 @@
 					}
 				},
 				"tags": [
-					"Pagamentos-TESTE-999"
+					"Pagamentos"
 				],
 				"security": [
 					{
@@ -1476,16 +1563,6 @@
 								}
 							}
 						}
-					},
-					"404": {
-						"description": "Não encontrado",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/MessageResponse"
-								}
-							}
-						}
 					}
 				},
 				"tags": [
@@ -1523,16 +1600,6 @@
 				"responses": {
 					"200": {
 						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/MessageResponse"
-								}
-							}
-						}
-					},
-					"404": {
-						"description": "Erro ao deletar",
 						"content": {
 							"application/json": {
 								"schema": {
